ENYO-5536: Fix ui/LabeledIcon alignment and spacing (#1867)
Integrated-By: Ryan Duffy (ryan.duffy@lge.com)

--- a/packages/moonstone/LabeledIcon/LabeledIcon.less
+++ b/packages/moonstone/LabeledIcon/LabeledIcon.less
@@ -8,12 +8,24 @@
 	margin: @moon-spotlight-outset;
 	padding: 0 @moon-spotlight-outset;
 
-	.icon {
-		// Margin top is handled by the parent's mrgin. An app setting the parent margin to 0 would
-		// not expect icon's margin to protrude past the outer component boundary. This ensures that
-		// won't happen.
+	// The following rules adjust the margin of icon so it behaves in a predictable way for users of
+	// this component, when applying their own styling/layout rules.
+	&.below .icon {
 		margin-top: 0;
 		margin-bottom: @moon-spotlight-outset;
+	}
+	&.above .icon {
+		margin-top: @moon-spotlight-outset;
+		margin-bottom: 0;
+	}
+	&.after,
+	&.before,
+	&.left,
+	&.right {
+		.icon {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 	}
 
 	.label {
